collapsible-bugs (#790)
* Make sure collapsibles have a unique key to avoid state collisions

* Make billing page span the available width

* Fix collapsible content being cut off

* Provide fallback value for when there are no alert configurations yet

--- a/frontend/src/components/Collapsible/Collapsible.module.scss
+++ b/frontend/src/components/Collapsible/Collapsible.module.scss
@@ -47,7 +47,7 @@
     .content {
         cursor: auto;
         padding: var(--size-large);
-        padding-top: 0;
+        padding-top: var(--size-xxSmall);
 
         p:first-of-type {
             margin-top: 0 !important;
